--- a/components/signUpForm.module.scss
+++ b/components/signUpForm.module.scss
@@ -86,6 +86,7 @@
         color: #333;
         justify-self: start;
         align-self: center;
+        width: 100%;
     }
 
     .eye {
